# hilfe

./: Cargo.toml  README.md
resources/: config_template.toml  prompt.zsh
