[package]
name = "hilfe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai = { version = "1.0.0-alpha.14", features = ["rustls"]}
tokio = { version = "*", features = ["full"]}
serde = { version = "1.0.197", features = ["derive"]}
toml = "0.8.12"
os_info = "3.8.2"
dirs = "5.0.1"