[package]
name = "hilfe"
description = "Your personal AI assistant"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://amokfa.github.io"
repository = "https://github.com/amokfa/hilfe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai = { version = "1.0.0-alpha.14", features = ["rustls"]}
tokio = { version = "1.0", features = ["full"]}
serde = { version = "1.0.197", features = ["derive"]}
toml = "0.8.12"
os_info = "3.8.2"
dirs = "5.0.1"